css/style.css
html {
    height:  100%;
    scroll-behavior: smooth;
    scroll-padding-top: 100px; /* Allow buffer so we don't scroll anchor links behind navbar */
}
body {
    background-color: rgba(16, 64, 13, 1);
    height: 100%;
}
.bg-cover {
    background: url("../css/bg-xsmall.png") no-repeat center;
    background-size: cover !important;
    position: fixed;
    height: 100vh;
    width: 100vw;
}
.bg-color {
    background-color: rgba(16, 64, 13, 0.5);
    height: 100%;
}

/* Allows bg-cover div to be fixed */
.content { 
    position: absolute;
    width: 100%;
}
#main {
    max-width: 800px;
}

/* Header */
header {
    background-color: rgba(16, 64, 13, 0.5);
    color: #FFFFFF;
}
#img-logo {
    max-width: 300px;
}
#img-crest {
    max-width: 80px;
}

/* Navbar */
nav {
    background-color: rgba(16, 64, 13, 0.5);
    margin-bottom: 20px;
}
nav.active-sticky {
    background-color: rgba(7, 52, 4, 0.8);
    padding-bottom: 10px;
}
#button-section {
    min-width: 280px;
}
#scroll-dropmenu {
    min-width: 280px;
    max-height: 200px;
    overflow-y: auto;
}
#js-top a {
    color: #FFFFFF;
    font-size: 30px;
}

/* Scrollable content */
/* Content formatting */
h2 {
    padding-bottom: 10px;
}
h4 {
    padding-top: 5px;
}
p, h2, h4 {
    color:  #FFFFFF;
}

/* Table content */
.column-1 { 
    font-weight:bold; 
}
.column-2, .column-3, .column-4, .column-5 { 
    text-align:right; 
}

#scroll-content {
    padding: 40px 20px 20px;
    background-color:  rgba(7, 52, 4, 0.6);
}
#scroll-content a {
    color: #bcdce9;
}
#scroll-content a:hover {
    color: #88ebb2;
}
#scroll-content hr.divider {
    border-bottom: 1px solid #009f4d;
    margin: 40px;
}

/* scroll-content: Lightbox */
.img-max {
    max-width:50%; 
    float:right; 
    margin-left:20px;
}

/* scroll-content: AnchorJS */
.anchorjs-link:hover {
    color: #2500ad;
}
*:hover > .anchorjs-link {
    transition: color .25s linear;
}
.anchorjs-link {
    text-decoration: none !important;
}

@media screen and (max-width: 600px) {
    .container {
        width:100%;
        padding: 0;
    }
    #scroll-content {
        padding: 40px 10px 20px;
    }
    table {
        font-size: 12px;
    }
    table th {
        word-wrap:break-word;
    }
}

footer {
    background-color: rgba(7, 52, 4, 1);
    color: #FFFFFF;
}

